<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:padding="@dimen/margin_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_tipo_vehiculo" />

        <RadioGroup
            android:id="@+id/radioGroupTypeOfVehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/typeCar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/rb_carro" />

            <RadioButton
                android:id="@+id/typeMotorcycle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/rb_moto" />
        </RadioGroup>

        <include
            android:id="@+id/loader"
            layout="@layout/loader" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:text="@string/tv_placa" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/plate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/et_placa_oculta"
                android:digits="qwertyuiopasdfghjklzxcvbnm 1234567890 QWERTYUIOPASDFGHJKLZXCVBNM"
                android:hint="@string/et_placa_oculta"
                android:inputType="none"
                android:maxLength="6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cylinderContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:text="@string/tv_cilindraje" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/cylinderCapacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/et_cilindraje_oculto"
                android:hint="@string/et_cilindraje_oculto"
                android:inputType="number"
                android:maxLength="4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/btn_cancelar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/btn_agregar" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
